--- a/src/Y22/Y22.csproj
+++ b/src/Y22/Y22.csproj
@@ -26,6 +26,12 @@
       <None Update="Day02\Data\sample">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Day03\Data\input">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Day03\Data\sample">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
